--- a/YoutubeDownload/Front/src/Youtube.css
+++ b/YoutubeDownload/Front/src/Youtube.css
@@ -143,3 +143,57 @@ body {
     color: red;
     font-weight: 600;
 }
+
+@media only screen and (max-width: 430px) and (max-height: 1000px) {
+
+    .container {
+        flex-direction: column;
+        align-items: center;
+        margin: 35% 15%;
+    }
+
+    .url-input {
+        width: 70%;
+        margin-left:11%;
+        padding: 12px 15px;
+        border-radius: 19px;
+        border: 1px solid #cbd5e1;
+        margin-bottom: 20px;
+        font-size: 14px;
+        outline: none;
+        transition: border 0.2s;
+        background-color: white;
+        color: #0000009c;
+    }
+    .download-btn {
+        width: 65%;
+        margin-left: 15%;
+        padding: 18px;
+        border: none;
+        border-radius: 12px;
+        background: #4f8ef794;
+        color: white;
+        font-weight: 600;
+        font-size: 16px;
+        cursor: pointer;
+        transition: background 0.2s;
+    }
+    .toggle-buttons {
+        display: flex;
+        gap: 12px;
+        margin: 5% 10% 5% 10%;
+        }
+        .history-card {
+        max-height: 600px;
+        overflow-y: auto;
+        padding: 25px;
+        width: 300px; */
+    }
+
+    .history-card table {
+    margin-left: -5%;
+    width: 100%;
+    border-collapse: collapse;
+    }
+
+    }
